--- a/front-end/package.json
+++ b/front-end/package.json
@@ -21,6 +21,7 @@
     "@mantine/next": "^6.0.16",
     "@tabler/icons-react": "^2.25.0",
     "axios": "^1.4.0",
+    "date-fns": "^4.1.0",
     "graphql": "^16.8.1",
     "graphql-tag": "^2.12.6",
     "next": "13.4.10",
